Fix styling and alignment in Funds activity

--- a/src/scss/_funds_activity.scss
+++ b/src/scss/_funds_activity.scss
@@ -202,8 +202,8 @@
 
             .status {
                 position: absolute;
-                top: 56px;
-                left: 134px;
+                top: 57px;
+                left: 150px;
             }
 
             .funds_act_entry__amount__container {
